@@ -1,3 +1,8 @@
 my $dir = story_dir();
 
-system("powershell -executionPolicy bypass	-file $dir\\cmd.ps1") == 0 or die "powershell command failed";
+if (os() eq 'windows'){
+  system("powershell -executionPolicy bypass	-file $dir\\cmd.ps1") == 0 or die "powershell command failed";
+} else {
+  print("Hello, World!");
+}
+
