@@ -2,6 +2,7 @@
 
 - Rewrite platform dependable code to pure Perl
 - Windows support
+- Recourse mode support (strun)
 
 0.3.17 2017-08-14
 
